--- a/LatexDocs/GeneralDocument/fogran.bib
+++ b/LatexDocs/GeneralDocument/fogran.bib
@@ -150,3 +150,1290 @@ doi={10.1109/TPDS.2013.104},
 ISSN={1045-9219}, 
 month={April},}
 
+@techreport{CITE-001,
+    institution = {ETSI ES 203 228 V1.1.6 standard},
+    posted-at = {2003-10-3},
+    title = {Environmental Engineering (EE) Assessment of mobile network energy efficiency},
+    year = {2016},
+    month = {September}
+}
+
+@article{CITE-002,
+author={E. Hossain, M. Rasti, H. Tabassum,  and A. Abdelnasser},  
+title={Evolution toward 5G  multi-tier cellular wireless networks: An interference management perspective}, 
+journal={IEEE Trans. Wireless Commun. vol. 21, no. 3, pp. 118–127},
+year={2014}, 
+month={June}
+}
+
+@INBOOK{CITE-003,
+author={SeungJune Yi and SungDuck Chun and YoungDae Lee and SungJun Park and SungHoon Jung},
+booktitle={Radio Protocols for LTE and LTE-Advanced},
+title={Enhanced Inter 2010;Cell Interference Coordination (eICIC)},
+year={2013},
+volume={},
+number={},
+pages={344-}
+}
+
+@techreport{CITE-004,
+    institution = {J. Madden, Tech. rep. Mobile Experts},
+    title = { Cloud RAN or Small Cells? },
+    year = {2013},
+    month = {April}
+}
+
+@techreport{CITE-005,
+    institution = {China Mobile Research Institute White Paper, vol. 3.0,},
+    title = { C-RAN The Road Towards Green RAN },
+    year = {2013},
+    month = {December}
+}
+
+@INPROCEEDINGS{CITE-006,
+author={H. Jinling},
+booktitle={2010 IEEE International Conference on Communication Systems},
+title={TD-SCDMA/TD-LTE evolution 2014; Go Green},
+year={2010},
+volume={},
+number={},
+pages={301-305},
+month={Nov}
+}
+
+@techreport{CITE-007,
+    institution = {Next generation mobile network alliance},
+    title = { RAN Evolution project CoMP evaluation and enhancement },
+    year = {2015},
+    month = {March}
+}
+
+@techreport{CITE-008,
+    institution = {Small Cell Forum, Tech. Rep.},
+    title = { Small cell virtualization functional splits and use cases },
+    year = {2015},
+    month = {June}
+}
+
+@ARTICLE{CITE-009,
+author={A. Checko and H. L. Christiansen and Y. Yan and L. Scolari and G. Kardaras and M. S. Berger and L. Dittmann},
+journal={IEEE Communications Surveys Tutorials},
+title={Cloud RAN for Mobile Networks 2014;A Technology Overview},
+year={2015},
+volume={17},
+number={1},
+pages={405-426},
+month={Firstquarter}
+}
+
+@article{CITE-010,
+    author= {T. Ryan},
+    title = { Radio over ethernet },
+    year = {2013},
+    month = {Feb.}
+}
+
+@INPROCEEDINGS{CITE-011,
+author={C. Y. Chang and R. Schiavi and N. Nikaein and T. Spyropoulos and C. Bonnet},
+booktitle={2016 IEEE International Conference on Communications (ICC)},
+title={Impact of packetization and functional split on C-RAN fronthaul performance},
+year={2016},
+month={May}
+}
+
+@techreport{CITE-012,
+    institution = {IEEE P1914.1 },
+    posted-at = {2016},
+    title = {TF meeting materials},
+    url = {http://sites.ieee.org/sagroups-1914/},
+    year = {2016},
+    month = {Aug.}
+}
+
+@techreport{CITE-013,
+    institution = {China Mobile Research Institute},
+    title = { White Paper of Next Generation Fronthaul Interface },
+    year = {2015},
+    month = {Oct.}
+}
+
+@techreport{CITE-014,
+    institution = {Next generation mobile network alliance},
+    title = { Further Study on Critical CRAN Technologies },
+    year = {2015},
+    month = {Mar.}
+}
+
+@techreport{CITE-015,
+    institution = {Small Cell Forum},
+    title = { Functional splits and use cases for small cell virtualization },
+    year = {2016},
+    month = {Jan.}
+}
+
+@ARTICLE{CITE-016,
+author={U. Dötsch and M. Doll and H. P. Mayer and F. Schaich and J. Segel and P. Sehier},
+journal={Bell Labs Technical Journal},
+title={Quantitative analysis of split base station processing and determination of advantageous architectures for LTE},
+year={2013},
+volume={18},
+number={1},
+pages={105-128},
+month={June},}
+
+@INPROCEEDINGS{CITE-017,
+author={A. Maeder and M. Lalam and A. De Domenico and E. Pateromichelakis and D. Wübben and J. Bartelt and R. Fritzsche and P. Rost},
+booktitle={2014 European Conference on Networks and Communications (EuCNC)},
+title={Towards a flexible functional split for cloud-RAN networks},
+year={2014},
+volume={},
+number={},
+pages={1-5},
+month={June},}
+
+@ARTICLE{CITE-018,
+author={A. Checko and A. P. Avramova and M. S. Berger and H. L. Christiansen},
+journal={Journal of Communications and Networks},
+title={Evaluating C-RAN fronthaul functional splits in terms of network level energy and cost savings},
+year={2016},
+volume={18},
+number={2},
+pages={162-172},
+month={April},}
+@techreport{CITE-019,
+    institution = {NGMN},
+    title = { Description of Network Slicing Concept },
+    year = {2016},
+    month = {January }
+}
+@ARTICLE{CITE-020,
+author={U. Dötsch and M. Doll and H. P. Mayer and F. Schaich and J. Segel and P. Sehier},
+journal={Bell Labs Technical Journal},
+title={Quantitative analysis of split base station processing and determination of advantageous architectures for LTE},
+year={2013},
+volume={18},
+number={1},
+pages={105-128},
+month={June},}
+
+@INPROCEEDINGS{CITE-021,
+author={A. Tzanakaki and M. Anastasopoulos and D. Simeonidou and I. Berberana and D. Syrivelis and T. Korakis and P. Flegkas and D. C. Mur and I. Demirkol and J. Gutiérrez and E. Grass and Qing Wei and E. Pateromichelakis and A. Fehske and M. Grieger and M. Eiselt and J. Bartelt and G. Lyberopoulos and E. Theodoropoulou},
+booktitle={2016 IEEE International Conference on Communications Workshops (ICC)},
+title={5G infrastructures supporting end-user and operational services: The 5G-XHaul architectural perspective},
+year={2016},
+volume={},
+number={},
+pages={57-62},
+month={May},}
+
+@techreport{CITE-022,
+    institution = {Small Cell Forum},
+    title = { Study on New Radio Access Technology: Radio Access Architecture and Interfaces, NTT DOCOMO, INC (Rapporteur), 3GPP TSG RAN3 },
+    year = {2016},
+    month = {August}
+}
+
+@techreport{CITE-023,
+    institution = {3GPP TSG RAN3},
+    title = { R3-161687, Draft TR 38.801 (v030) Study on New Radio Access Technology: Radio Access Architecture and Interfaces, NTT DOCOMO, INC (Rapporteur) },
+    year = {2016},
+    month = {August}
+}
+
+@misc{CITE-024,
+  author        = {Nader Zein, Andres Garcia- Saavedra},
+  title         = {Proposed options for functional splits for CRAN and fronthaul},
+  month         = {August},
+  year          = {2016},
+  publisher     ={NEC Europe}
+} 
+
+@INPROCEEDINGS{CITE-025,
+author={J. Liu and S. Zhou and J. Gong and Z. Niu and S. Xu},
+booktitle={2015 IEEE International Conference on Communications (ICC)},
+title={Graph-based framework for flexible baseband function splitting and placement in C-RAN},
+year={2015},
+pages={1958-1963},
+month={June},}
+
+@INPROCEEDINGS{CITE-026,
+author={X. Wang and L. Wang and S. E. Elayoubi and A. Conte and B. Mukherjee and C. Cavdar},
+booktitle={2017 IEEE International Conference on Communications (ICC)},
+title={Centralize or distribute? A techno-economic study to design a low-cost cloud radio access network},
+year={2017},
+pages={1-7},
+month={May},}
+
+@INPROCEEDINGS{CITE-027,
+author={C. Y. Chang and N. Nikaein and R. Knopp and T. Spyropoulos and S. S. Kumar},
+booktitle={2017 IEEE International Conference on Communications (ICC)},
+title={FlexCRAN: A flexible functional split framework over ethernet fronthaul in Cloud-RAN},
+year={2017},
+pages={1-7},
+month={May},}
+
+@INPROCEEDINGS{CITE-028,
+author={X. Wang and A. Alabbasi and C. Cavdar},
+booktitle={2017 IEEE International Conference on Communications (ICC)},
+title={Interplay of energy and bandwidth consumption in CRAN with optimal function split},
+year={2017},
+pages={1-6},
+month={May},}
+
+@ARTICLE{CITE-029,
+author={M. Artuso and A. Marcano and H. Christiansen},
+journal={IEEE Wireless Communications},
+title={Cloudification of mmwave-based and packet-based fronthaul for future heterogeneous mobile networks},
+year={2015},
+volume={22},
+number={5},
+pages={76-82},
+month={October},}
+
+@ARTICLE{CITE-030,
+author={M. A. Khalighi and M. Uysal},
+journal={IEEE Communications Surveys Tutorials},
+title={Survey on Free Space Optical Communication: A Communication Theory Perspective},
+year={2014},
+volume={16},
+number={4},
+pages={2231-2258},
+month={Fourthquarter},}
+
+@ARTICLE{CITE-031,
+author={M. Chiang and T. Zhang},
+journal={IEEE Internet of Things Journal},
+title={Fog and IoT: An Overview of Research Opportunities},
+year={2016},
+volume={3},
+number={6},
+pages={854-864},
+month={Dec},}
+
+@ARTICLE{CITE-032,
+author={A. Kiani and N. Ansari},
+journal={IEEE Internet of Things Journal},
+title={Towards Hierarchical Mobile Edge Computing: An Auction-Based Profit Maximization Approach},
+year={2017},
+volume={PP},
+number={99},
+pages={1-1},
+month={},}
+
+@ARTICLE{CITE-033,
+author={Y. Y. Shih and W. H. Chung and A. C. Pang and T. C. Chiu and H. Y. Wei},
+journal={IEEE Network},
+title={Enabling Low-Latency Applications in Fog-Radio Access Networks},
+year={2017},
+volume={31},
+number={1},
+pages={52-58},
+month={January},}
+
+
+@techreport{CITE-034,
+    institution = {Schneider Electric, Rueil Malmaison, France, White Paper 158},
+    title = {Guidance for Calculation of Efficiency (PUE) in Data Centers.},
+    year = {2010},
+}
+
+@techreport{CITE-035,
+    institution = {ETSI GR NFV-REL 007 V1.1.2},
+    posted-at = {2017-10},
+    title = {Network Function Virtualisation (NFV); Reliability; Report on the resilience of NFV-MANO critical capabilities },
+    year = {2017},
+    month = {October}
+}
+@techreport{CITE-036,
+    institution = {5G Americas},
+    title = { Network Slicing for 5G Networks and Services },
+    year = {2016},
+    month = {November}
+}
+
+
+
+
+
+
+
+
+
+@article{BRDCN-001,
+author={A. E. Ozdaglar and
+		D. P. Bertsekas
+		},  
+title={Optimal Solution of Integer Multicommodity Flow Problems With Application in Optical Networks}, 
+journal={Symposium on Global Optimization},
+year={2003}, 
+month={June}}
+
+@article{BRDCN-002,
+author={J. Tang and
+		G. Xue and
+		W. Zhang
+		},  
+title={Interference-Aware Topology Control and QoS Routing in Multi-Channel Wireless Mesh Networks}, 
+journal={The ACM International Symposium on Mobile Ad hoc Networking and Computing (MobiHoc)},
+year={2005}, 
+month={July}}
+
+
+@article{BRDCN-003,
+author={V. Kolar and
+		N. B. Abu-Ghazaleh
+		},  
+title={A Multi-Commodity Flow Approach for Globally Aware Routing in Multi-Hop Wireless Networks}, 
+journal={IEEE International Conference on Pervasive Computing and Communications (PERCOM)},
+year={2006}, 
+month={March}}
+
+
+@article{BRDCN-004,
+author={F. Babonneau and
+		O. du Merle and
+		J.P. Vial
+		},  
+title={Solving large scale linear multicommodity flow problems with an active set strategy and Proximal-ACCPM}, 
+journal={Operations Research journal},
+year={2006}, 
+month={February}}
+
+@article{BRDCN-005,
+author={L. Xiao and
+		M. Johansson and
+		S. P. Boyd
+		},  
+title={Simultaneous Routing and Resource Allocation Via Dual Decomposition}, 
+journal={IEEE Transactions on Communications},
+year={2004}, 
+month={July}}
+
+@article{BRDCN-006,
+author={J. Castro
+		},  
+title={A specialized interior-point algorithm for multicommodity network flows}, 
+journal={SIAM journal on Optimization},
+year={2000}, 
+month={July}}
+
+@article{BRDCN-007,
+author={A. Lucena  and
+	    J.E. Beasley
+		},  
+title={Branch and cut algorithms}, 
+journal={Advances in linear and integer programming, Oxford University Press},
+year={1996}, 
+month={July}}
+
+@article{BRDCN-008,
+author={A. Belloni and
+		C. Sagastizabal
+		},  
+title={Dynamic bundle methods}, 
+journal={Mathematical Programming},
+year={2009}, 
+month={July}}
+
+@article{BRDCN-009,
+author={M. L. Fisher
+		},  
+title={The Lagrangian Relaxation Method for Solving Integer Programming Problems}, 
+journal={Management Science},
+year={2004}, 
+month={December}}
+
+
+@article{BRDCN-010,
+author={F. Babonneau and
+		O. du Merle and
+		J. P. Vial
+		},  
+title={Solving large scale linear multicommodity flow problems with an active set strategy and Proximal-ACCPM}, 
+journal={Operations Research },
+year={2006}, 
+month={February}}
+
+
+@techreport{BRDCN-011,
+    institution = {Stanford University},
+    posted-at = {2003-10-3},
+    title = {Subgradient Methods},
+    year = {2003},
+    month = {October}
+}
+
+@article{BRDCN-012,
+author={L. Xiao and
+		M. Johansson and
+		S. P. Boyd
+		},  
+title={Simultaneous Routing and Resource Allocation Via Dual Decomposition}, 
+journal={IEEE Transactions on Communications},
+year={2004}, 
+month={July}}
+
+@article{BRDCN-013,
+author={E. A. Hansen and
+		S. Zilberstein
+		},  
+title={LAO*: A heuristic search algorithm that finds solutions with loops}, 
+journal={Artificial Intelligence},
+year={2001}, 
+month={Mars}}
+
+@article{BRDCN-014,
+author={K. Han and
+		 Z. Hu and
+		 J. Luo and
+		 L. Xiang
+		},  
+title={RUSH: RoUting and Scheduling for Hybrid Data Center Networks}, 
+journal={IEEE Conference on Computer Communications (INFOCOM)},
+year={2015}, 
+month={August}}
+
+
+@article{BRDCN-015,
+author={L. Luo and
+		 D. Guo and
+		 J. Wu and
+		 S. Rajbhandari and
+		 T. Chen and
+		 X. Luo
+		},  
+title={V{LC}cube: A VLC Enabled Hybrid Network Structure for Data Centers}, 
+journal={IEEE Transactions on Parallel and Distributed Systems},
+year={2016}, 
+month={December}}
+
+
+@article{BRDCN-016,
+author={W. Zhang and
+		 S. Zhang and
+		 Z. Qian and
+		 K. Wen and
+		 S. Lu
+		},  
+title={Virtual Network Deployment in Hybrid Data Center Networks}, 
+journal={IEEE Trustcom/BigDataSE/ISPA},
+year={2016}, 
+month={August}}
+
+@article{BRDCN-017,
+author={R. Arjun and
+		 Z. Hongyi and
+		 B. Jasmeet and
+		 P. George and
+		 S. Alex C
+		},  
+title={Inside the Social Network's (Datacenter) Network}, 
+journal={ACM Conference on Special Interest Group on Data Communication, SIGCOMM '15},
+year={2015}, 
+month={August}}
+
+
+@article{BRDCN-018,
+author={B. Dab and
+		I. Fajjari and
+		N. Aitsaadi
+		},  
+title={A Novel Joint Routing and Channel Allocation Approach in Hybrid Data Center Network}, 
+journal={IEEE International Conference on Sensing, Communication and Networking, SECON},
+year={2017}, 
+month={Jun}}
+@article{BRDCN-019,
+author={D. Abts and
+		B. Felderman
+		},  
+title={A Guided Tour of Data-Center Networking}, 
+journal={ACM Queue Networks magazine},
+year={2012}, 
+month={May}}
+
+@article{BRDCN-020,
+author={B. Dab and
+		I. Fajjari and
+		N. Aitsaadi and
+		A. Mellouk},
+title={A Novel Joint Routing and Channel Allocation Approach in Hybrid Data Center Network}, 
+journal={IEEE International Conference on Sensing, Communication and Networking (SECON)},
+year={2017}, 
+month={June}}
+
+@article{BRDCN-021,
+author={T. Chen and
+		X. Gao and
+		G. Chen},
+title={The features, hardware, and architectures of data center networks: A survey}, 
+journal={Journal of Parallel and Distributed Computing},
+year={2016}, 
+month={October}}
+
+
+@article{BRDCN-022,
+author={M. Al-Fares and
+		A. Loukissas and
+		A. Vahdat},
+title={A scalable, commodity data center network architecture}, 
+journal={ACM  Special Interest Group on Data Communication (SIGCOMM)},
+year={2008}, 
+month={August}}
+
+@article{BRDCN-023,
+author={B. Heller and
+		S. Seetharaman and
+		P. Mahadevan and
+		Y. Yiakoumis and
+		P. Sharma and
+		S. Banerjee and
+		N. McKeown},
+title={ElasticTree: saving energy in data center networks}, 
+journal={The 7th USENIX conference on Networked systems design and implementation},
+year={2010}, 
+month={April}}
+
+
+@article{BRDCN-024,
+author={R. Mysore and
+		A. Pamboris and
+		N. Farrington and
+		N. Huang and
+		P. Miri and
+		S. Radhakrishnan and
+		V. Subramanya and
+		A. Vahdat
+},
+title={PortLand: A Scalable Fault-Tolerant Layer 2 Data Center Network Fabric}, 
+journal={ACM  Special Interest Group on Data Communication (SIGCOMM)},
+year={2009}, 
+month={August}}
+
+
+@article{BRDCN-025,
+author={Y. Sun and
+		J. Chen and
+		Q. Liu and
+		W. Fang 
+},
+title={Diamond: An Improved Fat-tree Architecture for Largescale Data Centers }, 
+journal={Journal of Communications},
+year={2014}, 
+month={January}}
+
+
+@techreport{BRDCN-026,
+    institution = {CISCO},
+    title = {Cisco Visual Networking Index: Forecast and Methodology, 2015-2020},
+    year = {2016}
+}
+
+@article{BRDCN-027,
+author={A. Greenberg and
+		J. Hamilton and
+		D. Maltz and
+		P. Patel
+},
+title={The cost of a cloud: research problems in data center networks}, 
+journal={ACM  Special Interest Group on Data Communication (SIGCOMM)},
+year={2008}, 
+month={August}}
+
+@article{BRDCN-028,
+author={D. Abts and
+		M.R. Marty and
+		P.M. Wells and
+		P. Klausler and
+		H. Liu
+},
+title={Energy proportional datacenter networks}, 
+journal={ACM SIGARCH Computer Architecture},
+year={2010}, 
+month={June}}
+
+@article{BRDCN-029,
+author={D. Lin and
+		Y. Liu and
+		M. Hamdi and
+		J. Muppala
+},
+title={FlatNet: Towards a flatter data center network}, 
+journal={IEEE GlobeCom},
+year={2012}, 
+month={December}}
+
+
+@article{BRDCN-030,
+author={M. Csernai and
+		F. Ciucu and
+		R. Braun and
+		A. Gulyas
+},
+title={Towards 48-fold cabling complexity reduction in large flattened butterfly networks}, 
+journal={IEEE INFOCOM},
+year={2015}, 
+month={May}}
+
+
+@article{BRDCN-031,
+author={L. Gyarmati and
+		T.A. Trinh
+},
+title={Scafida: A scale-free network inspired data center architecture}, 
+journal={ACM SIGCOMM},
+year={2010}, 
+month={August}}
+
+@article{BRDCN-032,
+author={A. Singla and
+		C. Hong and
+		L. Popa and
+		P. B. Godfrey
+},
+title={Jellyfish: Networking Data Centers Randomly}, 
+journal={USENIX NSDI},
+year={2012}, 
+month={April}}
+
+@article{BRDCN-033,
+author={A.R. Curtis and
+		T. Carpenter and
+		M. Elsheikh and
+		A. Lopez-Ortiz and
+		S. Keshav
+},
+title={REWIRE: An optimization-based framework for unstructured data center network design}, 
+journal={IEEE Infocom},
+year={2012}, 
+month={May}}
+
+@inproceedings{Roy:2015:ISN:2785956.2787472,
+  author = {Roy, Arjun and Zeng, Hongyi and Bagga, Jasmeet and Porter, George and Snoeren, Alex C.},
+  title = {Inside the Social Network's (Datacenter) Network},
+  booktitle = {Proceedings of the 2015 ACM Conference on Special Interest Group on Data Communication},
+  series = {SIGCOMM '15},
+  year = {2015},
+  isbn = {978-1-4503-3542-3},
+  location = {London, United Kingdom},
+  pages = {123--137},
+  numpages = {15},
+  url = {http://doi.acm.org/10.1145/2785956.2787472},
+  doi = {10.1145/2785956.2787472},
+  acmid = {2787472},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {datacenter traffic patterns},
+}
+@techreport{BRDCN-034,
+    posted-at = {2016},
+    title = {Mega-datacenter battle update: Internet giants continue to increase capex},
+    year = {2016},
+    month = {August}
+}
+
+@article{RDCN-001,
+author={D. Halperin and
+		S. Kandula and
+		J. Padhye and
+		P. Bahl and 
+		D. Wetherall},  
+title={Augmenting Data Center Networks with Multi-Gigabit Wireless Links}, 
+journal={ACM  Special Interest Group on Data Communication (SIGCOMM)},
+year={2011}, 
+month={August}}
+
+@article{RDCN-002,
+author={Y. Zhu and
+		X. Zhou and
+		Z. Zhang and
+		L. Zhou and
+		A. Vahdat and
+		B. Y. Zhao and
+		H. Zheng},  
+title={Cutting the Cord: a Robust Wireless Facilities Network for Data Centers}, 
+journal={ACM Conference on Mobile Computing and Networking (MobiCom)},
+year={2014}, 
+month={September}}
+
+@article{RDCN-003,
+author={J.Y. Shin and
+	    E.G. Sirer and
+	    H. Weatherspoon and
+		D. Kirovski},  
+title={On the Feasibility of Completely Wireless Datacenters}, 
+journal={IEEE/ACM Transactions on Networking (TON)},
+year={2013}, 
+month={October}}
+
+@article{RDCN-004,
+author={A. Greenberg and
+		 al 
+		 A. Greenberg and
+		 J. R. Hamilton and
+		 N. Jain and
+		 S. Kandula and
+		 C. Kim and
+		 P. Lahiri},
+title={VL2: A scalable and flexible data center network}, 
+journal={ACM Special Interest Group on Data Communication (SIGCOMM)},
+year={2009}, 
+month={August}}
+
+@article{RDCN-005,
+author={Y. Li and
+	    F. Wu and
+	    X. Gao and
+	    G. Chen},
+title={SphericalMesh: A Novel and Flexible Network Topology for 60GHz-based Wireless Data Centers}, 
+journal={IEEE/CIC International Conference on Communications (ICCC)},
+year={2014}, 
+month={October}}
+
+@article{RDCN-006,
+author={H. Vardhan and
+		S.R. Ryu and
+		B. Banerjee and
+		R. Prakash},
+title={60 GHz wireless links in data center networks}, 
+journal={Computer Networks: The International Journal of Computer and Telecommunications Networking},
+year={2014}, 
+month={January}}
+
+@article{RDCN-007,
+author={X. Zhou and
+	    Z. Zhang and
+	    Y. Zhu and
+	    Y. Li and
+	    S. Kumar and
+		A. Vahdat and
+		B. Y. Zhao and
+		H. Zheng},
+title={Mirror Mirror on the Ceiling: Flexible Wireless Links for Data Centers}, 
+journal={ACM SIGCOMM},
+year={2012}, 
+month={August}}
+
+@article{RDCN-008,
+author={W. Zhang and
+	    X. Zhou and
+	    L. Yang and
+	    Z. Zhang and
+	    B. Y. Zhao and 
+	    H. Zheng},
+title={3D Beamforming for Wireless Data Centers}, 
+journal={Hotnets},
+year={2011}, 
+month={November}}
+
+@article{RDCN-009,
+author={L. Shan and
+	    C. Zhao and
+	    X. Tian and
+	    Y. Chengy and
+	    F. Yang and
+	    X. Gan},
+title={Relieving Hotspots in Data Center Networks with Wireless Neighborways}, 
+journal={IEEE Global Telecommunications Conference (GLOBECOM)},
+year={2014}, 
+month={December}}
+
+@article{RDCN-010,
+author={S. Singh and
+        F. Ziliottoy and
+        U. Madhow and
+        E. M. Belding-Royerz and
+        M. J. W. Rodwell},
+title={Millimeter Wave WPAN: Cross-Layer Modeling and Multihop Architecture}, 
+journal={ IEEE International Conference on Computer Communications, InfoCom},
+year={2007}, 
+month={May}}
+
+@article{RDCN-011, 
+journal={I{EEE} {S}td 802.15.3c-2009 (Amendment to IEEE Std 802.15.3-2003)}, 
+title={I{EEE} {S}tandard for Information technology ? telecommunications and information exchange between systems ?local and metropolitan area networks ? specific requirements. Part 15.3: Wireless Medium Access Control (MAC) and Physical Layer (PHY) Specifications for High Rate Wireless Personal Area Networks (WPANs) Amendment 2: Millimeter-wave-based Alternative Physical Layer Extension}, 
+year={2009}, 
+month={December}
+}
+
+@article{RDCN-012,
+author={A. Abouelaoualim and
+		K. C. Das and
+		L. Faria and
+		Y. Manoussakis and
+		C. Martinhon and
+		R. Saad},
+title={Paths and trails in edge-colored graphs}, 
+journal={Theoretical Computer Science},
+year={2008}, 
+month={December}}
+
+@article{RDCN-013,
+author={B. Dab and
+		I. Fajjari and
+		N. Aitsaadi and
+		A. Mellouk },
+title={A Novel Wireless Resource Allocation Algorithm in Hybrid Data Center Networks}, 
+journal={IEEE International Conference on Mobile Ad hoc and Sensor Systems (MASS)},
+year={2015}, 
+month={October}}
+
+@article{RDCN-014,
+author={J. Edmonds},
+title={Maximum matching and a polyhedron with 0-1 vertices}, 
+journal={Journal of Research at the National Bureau of Standards},
+year={1965}, 
+month={June}}
+
+@article{RDCN-015,
+author={J. Edmonds},
+title={Path, trees, and flowers}, 
+journal={Canadian J. Math},
+year={1965}, 
+month={February}}
+
+@article{RDCN-019,
+author={J. Edmonds and
+		J. Johnson and
+		E.L. Lockhart and
+		S.C},
+title={Blossom I: A Computer Code for the Matching Problem}, 
+journal={unpublished report, IBM T.J. Watson Research Center},
+year={1969}}
+
+@article{RDCN-016,
+author={H. Gabow},
+title={Implemenation of Algorithms for Maximum Matching on Nonbipartite Graphs}, 
+journal={Phd thesis, Standford University},
+year={1973}, 
+month={February}}
+
+@article{RDCN-017,
+author={Z. Galil and
+		S. Micalli and
+		H.N. Gabow},
+title={Algorithm for Finding a Maximal Weighted Matching in General Graphs}, 
+journal={SIAM Journal of Computing 15},
+year={1986}, 
+month={February}}
+
+@article{RDCN-018,
+author={H.N. Gabow},
+title={Data Structures for Weighted Matching and Nearest Common Ancestors with Linking}, 
+journal={Proceedings of the First Annual ACM-SIAM Symposium on Discrete Algorithms},
+year={1990}}
+
+@article{RDCN-020,
+author={K. Mehlhorn and
+		G. Schafer},
+title={Implementation of O(n m logn) Weighted Matchings in General Graphs: The Power of Data Structures}, 
+journal={Journal of Experimental Algorithmics (JEA)},
+year={2002}, 
+month={December}}
+
+@article{RDCN-021,
+author={M. Wattenhofer and
+		R. Wattenhofer},
+title={Fast and Simple Algorithms for Weighted Perfect Matching}, 
+journal={Elsevier Science},
+year={2004},
+month={March}}
+
+@article{RDCN-022,
+author={W. Cook and
+		A. Rohe},
+title={Computing Minimum-Weight Perfect Matchings}, 
+journal={Informs journal on Computing},
+year={1999},
+month={March}}
+
+@article{RDCN-023,
+author={V. Kolmogorov},
+title={Blossom V: A new implementation of a minimum cost perfect matching algorithm}, 
+journal={Mathematical Programming Computation},
+year={2009},
+month={March}}
+
+
+@techreport{RDCN-024,
+    institution = {CISCO},
+    posted-at = {2012},
+    title = {Cisco's Massively Scalable Data Center - Network Fabric for Warehouse Scale Computer},
+    url = {http://www.cisco.com/c/dam/en/us/td/docs/solutions/Enterprise/DataCenter/MSDC/1-0},
+    year = {2012},
+    month = {December}
+}
+
+@techreport{RDCN-025,
+    institution = {CISCO Systems},
+    posted-at = {2014-10-7},
+    title = {Massively Scalable Data Center ({MSDC}) Design and Implementation Guide},
+    year = {2014},
+    month = {October}
+}
+@techreport{RDCN-026,
+    institution = {Network Working Group - Request for Comments: 2992},
+    posted-at = {2000-11-7},
+    title = {Analysis of an Equal-Cost Multi-Path Algorithm},
+    year = {2000},
+    month = {November}
+}
+@article{RDCN-027,
+author={C. Guo and
+	    G. Lu and
+	    D. Li and
+	    H. Wu and
+	    X. Zhang and
+	    Y. Shi and
+	    C. Tian and
+	    Y. Zhang and
+	    S. Lu},
+title={BCube: A High Performance, Server-centric Network Architecture for Modular Data Centers}, 
+journal={ACM SIGCOMM},
+year={2009},
+month={August}}
+
+@article{RDCN-028,
+author={A. Greenberg and
+		N. Jain and
+		S. Kandula and
+		C. Kim and
+		P. Lahiri and
+		D. Maltz and
+		P. Patel and
+		S. Sengupta},
+title={VL2: A Scalable and Flexible Data Center Network}, 
+journal={ACM SIGCOMM},
+year={2009},
+month={August}}
+
+@article{RDCN-029,
+author={S. K. Ahuja and
+		A. Gopalan and
+		S. Ramasubramanian},
+title={Joint Routing and Channel Assignment in Multi-Channel Wireless Infrastructure Networks}, 
+journal={Broadband Communications, Networks and Systems Conference (BROADNETS)},
+year={2008},
+month={September}}
+
+
+@article{RDCN-030,
+author={A. Islam and
+		Md. J. Islam and
+		N. Nurain and
+		V. Raghunathan},
+title={Channel Assignment Techniques for Multi-Radio Wireless Mesh Networks: A Survey}, 
+journal={IEEE Communications Surveys and Tutorials},
+year={2015},
+month={December}}
+
+@article{RDCN-031,
+author={A. H. Mohsenian-Rad and
+	    V. W. S. Wong},
+title={ Joint Logical Topology Design, Interface Assignment, Channel Allocation, and Routing for Multi-Channel Wireless Mesh Networks}, 
+journal={IEEE Transactions on Wireless Communications},
+year={2007},
+month={December}}
+
+
+@article{RDCN-032,
+author={M. Al-Fares and
+	    A. Loukissas and
+	    A. Vahdat
+	    },
+title={A Scalable, Commodity Data Center Network Architecture}, 
+journal={ACM SIGCOMM},
+year={2008},
+month={August}}
+
+@article{RDCN-033,
+author={N. Farrington and
+		G. Porter and
+		S. Radhakrishnan and
+		H. H. Bazzaz and
+		V. Subramanya and
+		Y. Fainman and
+		G. Papen and
+		A. Vahdat
+	    },
+title={Helios: A Hybrid Electrical/Optical Switch Architecture for Modular Data Centers}, 
+journal={ACM SIGCOMM},
+year={2010},
+month={August}}
+
+
+
+
+
+@book{WDCN-001,
+  author={S.K. Hooda and
+  		  S. Kapadia and
+  		  P. Krishnan},
+  title={Using TRILL, FabricPath, and VXLAN: Designing Massively Scalable Data Centers with overlays},
+  year={2014},
+  month={January},
+  publisher={CISCO Press}
+}
+@article{WDCN-002, 
+author={Yong Cui and
+	    Hongyi Wang and
+ 	    Xiuzhen Cheng},  
+title={Channel allocation in wireless data center networks}, 
+journal={IEEE International Conference on Computer Communications (INFOCOM)},
+year={2011}, 
+month={April}}
+
+@article{WDCN-003, 
+title={I{EEE} {S}tandard for Information technology--{T}elecommunications and information exchange between systems {L}ocal and metropolitan area networks--{S}pecific requirements {P}art 11: {W}ireless {LAN} {Medium {A}ccess {C}ontrol (MAC) and {P}hysical {L}ayer (PHY) {S}pecifications - {R}edline}, 
+journal={IEEE Std 802.11-2012 (Revision of IEEE Std 802.11-2007) - Redline}, 
+year={2012}, 
+month={March}, 
+pages={1-5229}
+}
+}
+@article{WDCN-004, 
+journal={I{EEE} {S}td 802.11ad 2012}, 
+title={I{EEE} {S}tandard for {I}nformation technology--{T}elecommunications and information exchange between systems--{L}ocal and metropolitan area networks--{S}pecific requirements-{P}art 11: {W}ireless {LAN} {M}edium {A}ccess {C}ontrol ({MAC}) and Physical Layer ({PHY}) {S}pecifications {A}mendment 3: {E}nhancements for {V}ery {H}igh {T}hroughput in the 60{GH}z {B}and}, 
+year={2012}, 
+month={December}
+}
+
+@techreport{WDCN-005,
+    institution = {Agilent Technologies},
+    posted-at = {2013 -05-30},
+    title = {Wireless {LAN} at 60 {GH}z - {IEEE} 802.11ad {E}xplained},
+    url = {http://www.agilent.com/},
+    year = {2013},
+    month = {May},
+}
+
+@article{WDCN-006, 
+author={Y. Cui and
+	    H. Wang and
+	    X. Cheng and
+	    D. Li and
+	    A. Yla-Jaaski}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Dynamic Scheduling for Wireless Data Center Networks}, 
+year={2013}, 
+month={December}, 
+volume={24}, 
+number={12}, 
+pages={2365-2374}}
+
+@article{WDCN-008, 
+author={Y. Cui and
+		H. Wang and
+		X. Cheng and
+		B. Chen}, 
+journal={IEEE Wireless Communications}, 
+title={Wireless data center networking}, 
+year={2011}, 
+month={December}, 
+volume={18}, 
+number={6}, 
+pages={46-53}}
+
+@article {WDCN-009,
+	author = "D. Halperin and
+			  S. Kandula and
+			  J. Padhye and
+			  P. Bahl and
+	          D. Wetherall",
+	title = "Augmenting Data Center Networks with Multi-Gigabit Wireless Links",
+	journal = {ACM SIGCOMM},
+	year = {2011},
+	month = {August} }
+	
+@article {WDCN-010,
+	author = " W. Zhang and
+			   X. Zhou and
+			   L. Yang and
+			   Z. Zhang and
+			   B. Y. Zhao 
+			   and H. Zheng",
+	title = "3D Beamforming for Wireless Data Centers",
+	journal = { Hotnets'11},
+	year = {2011},
+	month={November}}
+	
+@article {WDCN-011,
+	author = "N. Hamedazimi and
+		      Z. Qazi and
+		      H. Gupta and
+		      V. Sekar and
+		      S. R. Das and
+		      J. P. Longtin and
+		      H. Shah and
+		      A. Tanwer",
+	title = "FireFly: A Reconfigurable Wireless Data Center Fabric Using Free-Space Optics",
+	journal = {ACM  Special Interest Group on Data Communication (SIGCOMM)},
+	year = {2014},
+	month = {August}	}
+	
+
+@article {WDCN-012,
+	author = "L. Shan and
+		      C. Zhao and
+		      X. Tian and
+		      Y. Chengy and
+		      F. Yang and
+		      X. Gan",
+	title = "Relieving Hotspots in Data Center Networks with Wireless Neighborways",
+	journal = {IEEE Global Communications Conference},
+	year = {2014},
+	month = {December}}
+	
+	
+@article {WDCN-013,
+	author = "K. Zhou and
+			  X. Tian and
+			  Y. Chengl",
+	title = "A Theoretical Framework for Mitigating Delay in 3D Wireless Data Center Networks",
+	journal = {IEEE International Conference on Communications},
+	year = {2014},
+	month = {Jun}
+}
+
+@techreport{WDCN-014,
+    institution = {Cisco},
+    posted-at = {2012 -12-21},
+    title = {Cisco's Massively Scalable Data Center},
+    url = {http://www.cisco.com},
+    year = {2012},
+    month = {December}
+}
+
+@article{WDCN-020,
+	author = "F. Yao and
+			 J. Wu and
+			 G. Venkataramani and
+			 S. Subramaniam",
+	title = "Comparative Analysis of Data Center Network Architectures",
+	journal = {IEEE ICC},
+	year = {2014},
+	month = {Jun}
+}
+
+@article{WDCN-021,
+	author = "C. E. Leiserson",
+	title = "Fat-Trees: Universal Networks for Hardware-Efficient Supercomputing",
+	journal = {IEEE Transactions on Computers},
+	year = {1985},
+	month = {October}
+}
+@article{WDCN-022,
+	author = "John Kim and
+			  W. J. Dally and
+			  D. Abts",
+	title = "Flattened Butterfly : A Cost-Efficient Topology for High-Radix Networks",
+	journal = {ISCA},
+	year = {2007},
+	month = {May}
+}
+
+@article{WDCN-023,
+	author = "H. Abu-Libdeh and
+			  P. Costa and
+			  A. Rowstron",
+	title = "Symbiotic Routing in Future Data Centers",
+	journal = {ACM SIGCOMM},
+	year = {2010},
+	month = {August}
+}
+
+@article{WDCN-024,
+	author = " C. Guo and
+			   H. Wu and
+			   K. Tan and
+			   L. Shi and
+			   Y. Zhang and
+			   S. Lu",
+	title = "Dcell: a scalable and fault-tolerant network structure for data centers",
+	journal = {ACM SIGCOMM},
+	year = {2008},
+	month = {August}
+}
+
+@article{WDCN-025,
+	author = " C. Guo and
+			   G. Lu and
+			   D. Li and
+			   H. Wu and
+			   X. Zhang and
+			   Y. Shi",
+	title = "BCube: A High Performance, Server-centric Network Architecture for Modular Data Centers",
+	journal = {ACM SIGCOMM},
+	year = {2009},
+	month = {August}
+}
+@article {WDCN-015,
+	author = "A. Mehrotra and
+			  M.A. Trick",
+	title = "A Column Generation Approach For Graph Coloring",
+	journal = {INFORMS Journal on Computing},
+	year = {1996},
+	month = {November},
+	page = {344-354}
+}
+@article {WDCN-016,
+	author = "S. Held and
+			  W. Cook and 
+			  E.C. Sewell",
+	title = "Maximum-weight stable sets and safe lower bounds for graph coloring",
+	journal = {Mathematical Programming Computation},
+	year = {2012},
+	month = {December},
+	page = {363-381}
+}
+
+@article {WDCN-017,
+	author = "C. Barnhart and
+			  E.L. Jhohnson and
+			  G.L. Nemhauser and
+			  M.W.P. Savelsbergh and 
+			  P.H. Vange",
+	title = "Branch-and-Price: Column Generation for solving Huge integer programs",
+	journal = {Operations Research},
+	year = {1998},
+	page = {316-329}
+}
+
+
+
+@article {WDCN-018,
+	author = "S. Gualandi and
+			  F. Malucelli.",
+	title = "Exact Solution of Graph Coloring Problems via Constraint Programming and Column Generation",
+	journal = {INFORMS Journal on Computing},
+	year = {2011},
+	month = {February},
+	page = {81-100} }
+	
+@article {WDCN-026,
+	author = "S. Gualandi and
+			  F. Malucelli.",
+	title = "Constraint programming-based column generation",
+	journal = {4OR: Quart. J. Oper. Res.},
+	year = {2009},
+	month = {June},
+	page = {113-137} }
+	
+	@article {WDCN-027,
+	author = "C. Barnhart and
+			  E. L. Jonhson and
+			  G. L. Nemhauser and
+			  M. W. P. Savelsbergh and
+			  P. H. Vance",
+	title = "Branch-and-Price: Column Generation fro solving huge integer programs",
+	journal = {INFORMS Journal on Computing},
+	year = {1996},
+	month = {January},
+	page = {316-329} }
+	
+@techreport{WDCN-019,
+    institution = {scalablenetworks},
+    title = {Qualnet Simulator},
+    url = {http://www.scalablenetworks.com/products/Qualnet/},
+    year = {2013}
+}
+
